Added extra blog posts

--- a/blogs/portfolio-changes.html
+++ b/blogs/portfolio-changes.html
@@ -46,23 +46,28 @@
                 <h2>What's changed since last time?</h2>
                 <a href="http://patrickwhitehouse.pw/old">The previous version of my portfolio.</a>
                 <h3>Everything!</h3>
-                <p>Pretty much everything has changed on my website. The design, colours, content and even my coding. Although I reieved excellent feedback at university, I believe there were too many simple errors made.</p>
+                <p>Pretty much everything has changed on my website. The design, colours, content and even my coding. Although I received excellent feedback at university, both from fellow students and industry professionals, I believe there were too many simple errors made.</p>
 
                 <h3>Aesthetics</h3>
-                <p>Originally, I had chosen colour scheme which included only one custom colour, teal. Other than teal, it was mainly made up of shades of black and greys and ocasionally, white. At first I believed this colour scheme was brilliant and easy on the eye. It was at first until I started to mess around with opacity levels and SASS functions such as lighten and darken. I quickly noticed that some colours were unreadable and probably would fail a constrast check. I have now introduced a purple and green colour scheme. The scheme was taken from <a href="https://randoma11y.com">https://randoma11y.com</a>, a website which lists accessible colour schemes.</p>
+                <p>Originally, I had chosen colour scheme which included only one custom colour, teal. Other than teal, it was mainly made up of shades of black and greys and occasionally, solid white. At first I believed this colour scheme was brilliant and easy on the eye. It was at first until I started to mess around with opacity levels and SASS functions such as lighten and darken. I quickly noticed that some colours were unreadable and probably would fail a contrast check. I have now introduced a purple and green colour scheme. The scheme was taken from <a href="https://randoma11y.com">https://randoma11y.com</a>, a website which lists accessible colour schemes.</p>
 
-                <p>I've also managed to create a brand logo for my portfolio. I plan on doing some cool things with the brand logo in the future, such as creating a animated preloader. </p>
+                <p>I've also managed to create a brand logo for my portfolio. The reason for deciding to create a brand logo was based on my feedback from the portfolio show. A few students and professionals noticed that once they clicked on a link to visit another internal page, there was no clear reminder that they were still on my portfolio.  I plan on doing some cool things with the brand logo in the future, such as creating an animated pre-loader.</p>
+
+                <p>Images have been optimised to the best they can without losing any vital quality. On the work page, the images used to show my projects have all been recreated, and, they have all been made the same dimensions to prevent their containers sizing different.</p>
+
+                <p>A hamburger menu has now been introduced to the site. This was one of the biggest downfalls of my original portfolio. The mobile menu links were far too close together and nothing else could be done to rectify this, except introducing a hamburger menu.</p>
 
                 <h3>The back end</h3>
-                <p>Honestly, my coding was awful. Well, it wasn&rsquo;t awful, but the choice of class names was. Quite a lot of my class names were irellevant and no coding guidelines such as BEM was followed. I used class names such as:
+                <p>Honestly, my coding was awful. Well, it wasn’t awful, but the choice of class names was. Quite a lot of my class names were irrelevant and no coding guidelines such as BEM was followed. I used class names such as:
                   <pre><code>&lt;div class="leftbox"&gt;my content&lt;/div&gt;
   </code></pre>
-              These were unsuitable class names as on a mobile device, they were stacked and therefore were not located in the place the class name suggests.
-              I now follow BEM and have ensured all of my naming conventions are relevant. My back end looks something like:
+             These were unsuitable class names as on a mobile device, they were stacked and therefore were not located in the place that the class name suggests. I now follow BEM and have ensured all my naming conventions are relevant. My back end looks something like:
               <pre><code>&lt;div class="btn btn--large"&gt;Download my CV&lt;/div&gt;
 </code></pre>
                 </p>
-                <p>On this itteration of my portfolio, I've also removed Google fonts. Instead, I've used system fonts, just to increase my websites performance a little bit more. </p>
+                <p>BEM is also beneficial for other developers wanting to view my source code. They’ll be able to locate elements easily in both the HTML and CSS files. </p>
+
+                <p>On this iteration of my portfolio, I've also removed Google fonts. Instead, I've used system fonts, just to increase my websites performance a little bit more.</p>
 
 
                 <button onclick="window.history.go(-1)" class="btn--back">Go back</button>
