--- a/blogs/portfolio-optimisation.html
+++ b/blogs/portfolio-optimisation.html
@@ -82,6 +82,10 @@
                     <figcaption class="screenshot__caption">My meta data tags</figcaption>
                 </figure>
 
+                <h3>References</h3>
+                <p>W3C. (no date) <i>The W3C Markup Validation Service.</i> [Online] [Accessed 10th November 2016] <a href="https://validator.w3.org/" title="Validation service">https://validator.w3.org/</a></p>
+                <p>Optimizilla. (no date) <i>Online Image Compressor.</i> [Online] [Accessed 10th November 2016] <a href="http://optimizilla.com/" title="Image optimisation">http://optimizilla.com/</a></p>
+
                 <button onclick="window.history.go(-1)" class="btn--back">Go back</button>
             </article>
         </div>
