--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
           </form>
           <div class="contact__cv">
             <p>Fancy taking a look at what other skills I can offer?</p>
-            <button class="contact__button" onclick=window.open('img/cv.pdf')>Download my CV</button>
+            <button class="contact__button" onclick=window.open('img/CV.pdf')>Download my CV</button>
           </div>
         </div>
       </div>
