--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
         <div class="blog__post">
           <h2 class="blog__title">CSS Grids Project</h2>
           <p class="blog__description">Self initiated university project #1.</p>
-          <a href="#" class="blog__read">Read about my CSS Grid project</a>
+          <a href="blogs/css-grids.html" class="blog__read">Read about my CSS Grid project</a>
         </div>
 
         <div class="blog__post">
