Optimised CSS files, reduced to 2kb

--- a/work.html
+++ b/work.html
@@ -61,7 +61,7 @@
           <img src="../img/css-grid.png" alt="Maid About Town's website" class="projects__img">
           <h3>CSS Grids</h3>
           <p>Self initiated project for a university module. Recreated MMU's homepage using only CSS Grids.</p>
-          <a href="http://patrickwhitehouse.pw/css-grids/" class="projects__view">View CSS Grid Project</a>
+          <a href="http://patrickwhitehouse.pw/css-grid/" class="projects__view">View CSS Grid Project</a>
         </div>
           <div class="projects__item uni">
             <img src="../img/maidabouttown.png" alt="Maid About Town's website" class="projects__img">
