Minor changes made to homepage and blog post

--- a/blogs/css-grids.html
+++ b/blogs/css-grids.html
@@ -46,39 +46,33 @@
                 <h2>Self initiated project</h2>
                 <h3>Aims and Objectives</h3>
                 <p>The aim of this self-initiated project was to reproduce my current portfolio homepage by using CSS grids, an upcoming CSS property.</p>
-                <p>The objectives set were: 
-                <ol>
-                  <li>To identify the functionality of CSS Grids and good practice in their implementation.</li>
-                  <li>To use video tutorials, in particular those created by Rachel Andrew. </li>
-                  <li>To use CodePen to quickly test CSS Grids. </li>
-                  <li>To redevelop homepage using CSS Grids.</li>
-                </ol>
-                </p>
+                <p>To achieve the aim, it was important that a good resource was found to learn CSS Grid, and also a suitable platform to test my code.</p>
 
                 <h3>Definition</h3>
-                <p>As quite a lot, if not the majority of web traffic is from handheld devices, such as mobile phones and tablets, the web has had to adapt to suit these devices and fulfil their user’s needs. To help reduce development time and to speed up rapid prototyping, frameworks were created so that developers could create responsive, accessible and functional web applications with speed. Some examples of well-known frameworks are Bootstrap and Foundation by Zurb. Frameworks can be downloaded and included through a stylesheet or through a CDN (content delivery network). As frameworks tend to include quite a lot of default styles, these cause the stylesheets to be relatively large and could increase load times which will cause some developers to steer away from them. An alternative to frameworks is Flexbox. Flexbox was introduced in 2014 and is supported by most browsers. Flexbox gives developers and designers full control over their designs and most importantly, very little code is needed to create a complex layout. A relatively new CSS layout property is CSS Grids. Currently it is not supported by all browsers and must be enabled using flags in Chrome. </p>
-                <p> &rdquo;Flexbox is essentially for laying out items in a single dimension – in a row OR a column. Grid is for layout of items in two dimensions – rows AND columns. &ldquo; (Andrew, 2016:online)</p>
                 <p>At the start of this project, I had no understanding of CSS Grids, however I had a good understanding of Flexbox and also had used frameworks such as Bootstrap in previous projects. Due to this, I decided it would be best to start from scratch and to learn the basics whilst documenting them.</p>
+                <p>As quite a lot, if not the majority of web traffic is from handheld devices, such as mobile phones and tablets, the web has had to adapt to suit these devices and fulfil their user’s needs. To help reduce development time and to speed up rapid prototyping, frameworks were created so that developers could create responsive, accessible and functional web applications with speed. Some examples of well-known frameworks are <a href="http://getbootstrap.com">Bootstrap</a> and <a href="http://foundation.zurb.com">Foundation by Zurb</a>. Frameworks can be downloaded and included through a stylesheet or through a CDN (content delivery network). As frameworks tend to include quite a lot of default styles, these cause the stylesheets to be relatively large and could increase load times which will cause some developers to steer away from them. An alternative to frameworks is <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/">Flexbox</a>. Flexbox was introduced in 2014 and is supported by most browsers. Flexbox gives developers and designers full control over their designs and most importantly, very little code is needed to create a complex layout. A relatively new CSS layout property is CSS Grids. Currently it is not supported by all browsers and must be enabled using flags in Chrome. </p>
+                <p> &rdquo;Flexbox is essentially for laying out items in a single dimension – in a row OR a column. Grid is for layout of items in two dimensions – rows AND columns. &ldquo; (Andrew, 2016:online)</p>
+                
 
                 <h3>Setup</h3>
-                <p>For this project, only a small selection of tools was used. These were:</p>
+                <p>For this project, only a small selection of tools were used. These were:</p>
                 <p>
                   <ol>
                     <li>Sublime text – My choice of text editor. Within Sublime, I also used plugins to help speed up my workflow.</li>
-                    <li>CodePen – CodePen was used during the beginning of the project. </li>
-                    <li>Gulp – Gulp was used for one feature only, BrowserSync.</li>
+                    <li>CodePen was used during the beginning of the project. </li>
+                    <li>Gulp was used for one feature only, BrowserSync.</li>
                     <li>HTML &amp; CSS – The languages used to make this project possible.</li>
                   </ol>
                 </p>
 
                 <h3>Location</h3>
-                <p>The documentation of my learning was placed on CodePen. URL: <a href="http://codepen.io/patrickwhitehouse/">http://codepen.io/patrickwhitehouse/</a>
+                <p>The documentation of my learning was placed on <a href="http://codepen.io/patrickwhitehouse/">CodePen</a>.
                 <br>
-                The final demonstrator is located at: <a href="http://www.patrickwhitehouse.pw/CSS-Grid">http://www.patrickwhitehouse.pw/CSS-Grid</a>
+                The final <a href="http://www.patrickwhitehouse.pw/css-grid">CSS Grid demonstrator.</a>
                 </p>
 
                 <h3>How</h3>
-                <p>As CSS Grids is only just emerging in modern web browsers, it was relatively hard to find tutorials and resources to learn about how it works. Luckily, I follow a well know key figure in the industry on Twitter, Rachel Andrew. Rachel had posted a link to a useful website which she had created, dedicated for beginners interested in learning CSS Grids and the syntax. I decided to document my learning on CodePen as it was easy to create an initial pen and to make various iterations of that pen as my learning developed.</p>
+                <p>As CSS Grids is only just emerging in modern web browsers, it was relatively hard to find tutorials and resources to learn about how it works. Luckily, I follow a well know key figure in the industry on Twitter, <a href="https://twitter.com/rachelandrew">Rachel Andrew</a>. Rachel had posted a link to a useful website which she had created, dedicated for beginners interested in learning CSS Grids and the syntax. I decided to document my learning on CodePen as it was easy to create an initial pen and to make various iterations of that pen as my learning developed.</p>
 
                 <h4>First Iteration</h4>
                 <p>For the first pen, a simple grid was created using six div elements within a wrapper which had the display:grid; property added to it. Within the wrapper, three columns and rows had been created. The code for the columns and rows were: 100px 100px 100px. This means that rows have a height of 100px and the columns have a width of 100px, which is repeated three times.  As this grid uses a defined set width of the columns, this makes it unresponsive.</p>
@@ -103,10 +97,17 @@
                 <h4>Final Iteration</h4>
                 <p>Once I understood CSS grids and how the children behaved inside of the grid container, I decided to recreate Manchester Metropolitan University’s homepage, using their images and colours. An issue I ran into during this iteration was remembering to group elements within divs for them to display in the same cell. CSS Grid tries to place each child into its own cell within the grid meaning, for example, if you had a H1 and P tag and wanted them in the same cell, you would have to group them in a div. 
                 <br><br>
-                <a href="http://patrickwhitehouse.pw/css-grid">Final Iteration / Product</a></p>
+                The final <a href="http://www.patrickwhitehouse.pw/css-grid">CSS Grid demonstrator.</a>
 
                 <h3>Evaluation</h3>
-                <p>It was relatively easy to recreate the homepage using CSS grids. This was down to grids allowing me to add other properties such as grid gap which meant usual CSS properties such as margin didn’t need to be added to space grid rows or columns. I believe CSS grids has an exciting future once all modern browsers decide to ship it. Sophisticated layouts can be created rather easily and elements can be moved around and positioned however the developer needs them with ease.</p>
+                <p>It was relatively easy to recreate the homepage using CSS grids. This was down to grids allowing me to add other properties such as grid gap which meant usual CSS properties such as margin didn’t need to be added to space grid rows or columns. I believe CSS grids has an exciting future once all modern browsers decide to implement it. Sophisticated layouts can be created rather easily and elements can be moved around and positioned however the developer needs them with ease.</p>
+
+                <h3>References</h3>
+                <p>Andrew, R., 2016. <i>Should I use Grid or Flexbox?.</i> [Online] 
+                    Available at: https://rachelandrew.co.uk/archives/2016/03/30/should-i-use-grid-or-flexbox/
+                    [Accessed 27 February 2017].
+
+                </p>
 
                 <button onclick="window.history.go(-1)" class="btn--back">Go back</button>
             </article>
