--- a/blogs/portfolio-changes.html
+++ b/blogs/portfolio-changes.html
@@ -58,7 +58,7 @@
                 <p>A hamburger menu has now been introduced to the site. This was one of the biggest downfalls of my original portfolio. The mobile menu links were far too close together and nothing else could be done to rectify this, except introducing a hamburger menu.</p>
 
                 <h3>The back end</h3>
-                <p>Honestly, my coding was awful. Well, it wasn’t awful, but the choice of class names was. Quite a lot of my class names were irrelevant and no coding guidelines such as BEM was followed. I used class names such as:
+                <p>Honestly, my coding was awful. Well, it wasn’t awful, but the choice of class names were. Quite a lot of my class names were irrelevant and no coding guidelines such as BEM were followed. I used class names such as:
                   <pre><code>&lt;div class="leftbox"&gt;my content&lt;/div&gt;
   </code></pre>
              These were unsuitable class names as on a mobile device, they were stacked and therefore were not located in the place that the class name suggests. I now follow BEM and have ensured all my naming conventions are relevant. My back end looks something like:
