--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <header>
     <div class="trigger">
+    <img src="img/logo.svg" alt="" width="100">
       <button class="hamburger hamburger--spring" type="button">
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
@@ -49,6 +50,7 @@
       <p>My name is Patrick Whitehouse. I am a web development student at Manchester Metropolitan University. Currently, I am in my final year and will be seeking graduate positions very soon.</p>
       <p>I have always been interested in the web from an early age, specifically how websites are made. From here I began to read books on web languages, such as HTML and CSS. I grasped the basics and started building small websites to showcase to my family members.</p>
       <p>Although they were very basic, I was always seeking ways in which I could improve them. These improvements included things such as adding a basic contact form, and sadly, using tables to create a simple layout where I could replicate my Photoshop designs.</p>
+      <p>After I've achieved my degree, I hope to find a career within the industry working as a front end web developer as this is where my passion lies. After I've grasped the basics and have a feel for what it is like working within the industry, I would like to experience working as a freelance developer.</p>
       <p>Besides creating websites, I have a variety of hobbies. These include attending car shows and meet ups, and photography. Sometimes I like to combine the two together and I try to capture the car shows in an image format.</p>
     </div>
   </section>
