--- a/work.html
+++ b/work.html
@@ -57,8 +57,13 @@
         </div>
 
         <div class="projects">
+        <div class="projects__item personal">
+          <img src="http://www.placehold.it/550x200" alt="Maid About Town's website" class="projects__img">
+          <h3>Startup</h3>
+          <p>This is an upcoming project for a startup business based in Trafford. I will be developing a website for the client to kickstart their online presence. </p>
+        </div>
         <div class="projects__item uni">
-          <img src="../img/css-grid.png" alt="Maid About Town's website" class="projects__img">
+          <img src="../img/css-grid.png" alt="CSS Grid" class="projects__img">
           <h3>CSS Grids</h3>
           <p>Self initiated project for a university module. Recreated MMU's homepage using only CSS Grids.</p>
           <a href="http://patrickwhitehouse.pw/css-grid/" class="projects__view">View CSS Grid Project</a>
