Added extra blog

--- a/blog.html
+++ b/blog.html
@@ -49,10 +49,16 @@
   <section>
       <div class="wrapper">
       <div class="blogs">
+        
+        <div class="blog__post">
+          <h2 class="blog__title">Vanilla JavaScript animations</h2>
+          <p class="blog__description">Self initiated university project #2. How easy was it to recreate common jQuery uses such as sticky nav's using Vanilla JS?</p>
+          <a href="blogs/vanilla-js.html" class="blog__read">Read about my Vanilla JS project</a>
+        </div>
 
         <div class="blog__post">
-          <h2 class="blog__title">CSS Grids Project</h2>
-          <p class="blog__description">Self initiated university project #1.</p>
+          <h2 class="blog__title">CSS Grids</h2>
+          <p class="blog__description">Self initiated university project #1. How I used the upcoming CSS property to recreate MMU's homepage.</p>
           <a href="blogs/css-grids.html" class="blog__read">Read about my CSS Grid project</a>
         </div>
 
