--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
   <title>Patrick Whitehouse – Front end developer from Manchester</title>
 </head>
 <body>
-
   <header>
     <div class="trigger">
-    <img src="img/logo.svg" alt="" width="100">
       <button class="hamburger hamburger--spring" type="button">
         <span class="hamburger-box">
           <span class="hamburger-inner"></span>
@@ -107,8 +105,6 @@
   ga('send', 'pageview');
 
 </script>
-  <script type="text/javascript" src="js/main.js">
-
-  </script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
