Final blog added

--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
         
         <div class="blog__post">
           <h2 class="blog__title">Vanilla JavaScript animations</h2>
-          <p class="blog__description">Self initiated university project #2. How easy was it to recreate common jQuery uses such as sticky nav's using Vanilla JS?</p>
+          <p class="blog__description">Self initiated university project #2. How easy was it to recreate common jQuery uses such as sticky navigations using Vanilla JS?</p>
           <a href="blogs/vanilla-js.html" class="blog__read">Read about my Vanilla JS project</a>
         </div>
 
