--- a/blogs/portfolio-changes.html
+++ b/blogs/portfolio-changes.html
@@ -61,13 +61,13 @@
                 <p>Honestly, my coding was awful. Well, it wasn’t awful, but the choice of class names were. Quite a lot of my class names were irrelevant and no coding guidelines such as BEM were followed. I used class names such as:
                   <pre><code>&lt;div class="leftbox"&gt;my content&lt;/div&gt;
   </code></pre>
-             These were unsuitable class names as on a mobile device, they were stacked and therefore were not located in the place that the class name suggests. I now follow BEM and have ensured all my naming conventions are relevant. My back end looks something like:
+             These were unsuitable class names as on a mobile device, the elements were stacked and therefore were not located in the place that the class name suggests. I now follow BEM and have ensured all my naming conventions are relevant. My back end looks something like:
               <pre><code>&lt;div class="btn btn--large"&gt;Download my CV&lt;/div&gt;
 </code></pre>
                 </p>
                 <p>BEM is also beneficial for other developers wanting to view my source code. They’ll be able to locate elements easily in both the HTML and CSS files. </p>
 
-                <p>On this iteration of my portfolio, I've also removed Google fonts. Instead, I've used system fonts, just to increase my websites performance a little bit more.</p>
+                <p>On this iteration of my portfolio, I've also removed Google fonts. Instead, I've used system fonts, just to increase my websites performance a little bit more. On the previous version, I used three web fonts which were used for aesthetic purposes.</p>
 
 
                 <button onclick="window.history.go(-1)" class="btn--back">Go back</button>
