Blog images added, updated

--- a/blogs/portfolio-changes.html
+++ b/blogs/portfolio-changes.html
@@ -56,6 +56,8 @@
                 <p>Images have been optimised to the best they can without losing any vital quality. On the work page, the images used to show my projects have all been recreated, and, they have all been made the same dimensions to prevent their containers sizing different.</p>
 
                 <p>A hamburger menu has now been introduced to the site. This was one of the biggest downfalls of my original portfolio. The mobile menu links were far too close together and nothing else could be done to rectify this, except introducing a hamburger menu.</p>
+                <img src="../img/portfolio_before.jpg" class="blog__example" alt="My portfolio before any changes were made">
+                <img src="../img/portfolio_after.jpg" class="blog__example" alt="My portfolio after changes were made">
 
                 <h3>The back end</h3>
                 <p>Honestly, my coding was awful. Well, it wasn’t awful, but the choice of class names were. Quite a lot of my class names were irrelevant and no coding guidelines such as BEM were followed. I used class names such as:
