--- a/blogs/vanilla-js.html
+++ b/blogs/vanilla-js.html
@@ -63,7 +63,7 @@
                 </p>
 
                 <h3>Location</h3>
-                <p>The documentation of my learning was placed on <a href="http://codepen.io/patrickwhitehouse/">CodePen</a>.
+                <p>The documentation of my learning was placed on <a href="http://codepen.io/patrickwhitehouse/">CodePen</a>. CodePen was extremely useful for this project as I was able to make changes to the pens and see updates almost instantly. 
                 </p>
 
                 <h3>How</h3>
@@ -80,13 +80,13 @@
                 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
 
                 <h4>Third Iteration</h4>
-                <p>Once I had figured out how to append classes, I decided to challenge myself. A set myself a task to animate elements once they were visible in the viewport (window). After using <a href="http://stackoverflow.com">Stack Overflow</a> for some troubleshooting, I discovered I was able to use document.getElementsByClassName('box'); to retrieve all the items with the class name ‘box’. Unlike the getElementById, it returned the classes in an array format which meant a loop had to be used to apply classes to each box, otherwise, only the first box would have been affected and had the class applied to it. This is where I struggled most. Making an element fade in when it is visible in the viewport is easier said than done in Vanilla JavaScript. For this iteration, I simply made the elements fade in when the final paragraph was scrolled past. 
+                <p>Once I had figured out how to append classes, I decided to challenge myself. A set myself a task to animate elements once they were visible in the viewport (window). After using <a href="http://stackoverflow.com">Stack Overflow</a> for some troubleshooting, I discovered I was able to use document.getElementsByClassName('box'); to retrieve all the items with the class name ‘box’. Unlike the getElementById, it returned the classes in an array format which meant a loop had to be used to apply classes to each box, otherwise, only the first box would have been affected and had the class applied to it. This is where I struggled most. Making an element fade in when it is visible in the viewport is easier said than done in Vanilla JavaScript and for this iteration, I had to settle with making the elements animate once the last paragraph had been scrolled past.
 </p>
                 <p data-height="400" data-theme-id="dark" data-slug-hash="KWWwGB" data-default-tab="result" data-user="patrickwhitehouse" data-embed-version="2" data-pen-title="JavaScript animation" class="codepen">See the Pen <a href="http://codepen.io/patrickwhitehouse/pen/KWWwGB/">JavaScript animation</a> by Patrick Whitehouse (<a href="http://codepen.io/patrickwhitehouse">@patrickwhitehouse</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
 
                 <h4>Fourth Iteration</h4>
-                <p>One of the most common trends on websites is a navigation that becomes fixed once the user has scrolled past it. This was easy to recreate using Vanilla JavaScript. All that was needed was the windows height, the nav and the class I was adding and removing. </p>
+                <p>One of the most common trends on websites is a navigation that becomes fixed once the user has scrolled past it. This was easy to recreate using Vanilla JavaScript. All that was needed was the windows height, the nav and the class I was adding and removing. This is a great example to show when Vanilla JavaScript should be used over jQuery. On my personal portfolio, I am guilty of making the user download jQuery to display similar effects to my navigation bar.  </p>
                 <p data-height="400" data-theme-id="dark" data-slug-hash="zZNvop" data-default-tab="result" data-user="patrickwhitehouse" data-embed-version="2" data-pen-title="Javascript project - 3 - Sticky nav" class="codepen">See the Pen <a href="http://codepen.io/patrickwhitehouse/pen/zZNvop/">Javascript project - 3 - Sticky nav</a> by Patrick Whitehouse (<a href="http://codepen.io/patrickwhitehouse">@patrickwhitehouse</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                 <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
 
