--- a/work.html
+++ b/work.html
@@ -58,10 +58,10 @@
 
         <div class="projects">
         <div class="projects__item uni">
-          <img src="../img/css-grid.png" alt="CSS Grid" class="projects__img">
+          <img src="../img/vanilla_js.png" alt="Vanilla JavaScript" class="projects__img">
           <h3>Vanilla JavaScript</h3>
           <p>Self initiated project for a university module. Exploring how difficult it is to animate DOM elements using Vanilla JS.</p>
-          <a href="http://patrickwhitehouse.pw/css-grid/" class="projects__view">View CSS Grid Project</a>
+          <a href="http://patrickwhitehouse.pw/vanilla-js/" class="projects__view">View Vanilla JS Project</a>
         </div>
         <div class="projects__item personal">
           <img src="http://www.placehold.it/550x200" alt="Maid About Town's website" class="projects__img">
